--- a/3주차-넘파이기초-1.ipynb
+++ b/3주차-넘파이기초-1.ipynb
@@ -12,6 +12,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5a5448aa",
+   "metadata": {},
+   "source": [
+    "![img8](./img/img8.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d9aa204b",
    "metadata": {},
    "source": [
