--- a/11주차_분자다루기_2.ipynb
+++ b/11주차_분자다루기_2.ipynb
@@ -6,7 +6,7 @@
     "id": "vPBEqLR3vhGi"
    },
    "source": [
-    "# Molecular Visualization using RDkit & CheMBL DB data preprocessing"
+    "# Molecular Visualization using RDkit & ChEMBL DB data preprocessing"
    ]
   },
   {
@@ -177,6 +177,21 @@
    "source": [
     "#Chembl DB에서 데이터를 가져올 수 있는 라이브러리 설치\n",
     "!pip install chembl_webresource_client"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![img](./img/img50.png)\n",
+    "![img](./img/img51.png)\n",
+    "* SMILES의 장점\n",
+    "    * 탐색이 쉬움\n",
+    "    * SMILES는 시퀀스 또는 chracter로 표현할 수 있기에 비교 분석이 쉬움\n",
+    "    * SMILES의 장점은 한줄로 표현할 수 있다는 장점이 있지만, 같은 구조를 가진 분자라도 여러가지 SMILES로 표현되는 경우가 있음\n",
+    "    * 1개의 SMILES만 사용하도록 따로 설정을 하여 생성한 문자열이 있음(InChl 사용)\n",
+    "    * IUPAC에서 1개의 분자에 대한 1개의 표현식으로 변환해줌\n",
+    "![img](./img/img52.png)"
    ]
   },
   {
@@ -904,6 +919,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![img](./img/img56.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ECFP 생성 방법\n",
+    "* 1. 원자에 대해서 식별하고 Daylight atomic invairants rule로 주변 구조나 특징들을 숫자화 시킴\n",
+    "![img](./img/img58.PNG)\n",
+    "* 2. Diameter에 따라 각 원소를 기준으로 어떤 특징이 있는지 추가해주는 단계\n",
+    "![img](./img/img59.PNG)\n",
+    "* 3. 중복 제거 단계\n",
+    "![img](./img/img60.PNG)\n",
+    "* 4. 수치화\n",
+    "![img](./img/img61.PNG)\n",
+    "    * 해쉬함수의 단점: 고정된 길이에 값들을 할당하는 방식 즉,  many to one이기 때문에 다른 두개의 값에 대해 동일한 해시 값을 내는 해시 충돌이 발생하게 됨\n",
+    "![img](https://i.imgur.com/NnEBDcX.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
@@ -1100,8 +1139,21 @@
     "id": "vL7UEN-VUIMD"
    },
    "source": [
-    "# 외부데이터 가져오고 정제하기(CheMBL DB)\n",
+    "# 외부데이터 가져오고 정제하기(ChEMBL DB)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ChEMBL DB 특징\n",
+    "* 공개되어있는 신약개발을 위한 DB\n",
+    "* 무료로 접근가능하고 검색 및 다운로드 지원\n",
+    "* 분자의 2D 구조를 제공하고, 측정된 특징들을 제공함(logP, MW, Lipinski, etc)\n",
+    "* 연구자들이 연구한 논문을 기반으로 데이터베이스 구축이 되었음\n",
+    "* 단점 연구 논문에 기반해서 데이터베이스화했기때문에 여러가지 측정 지표들이 있어 여러개의 데이터를 합쳤을때, 단위 또는 지표가 통일되지 않는 면이 있음(IC50, Ki, etc)\n",
+    "![img](./img/img57.png)"
    ]
   },
   {
@@ -1111,6 +1163,13 @@
    },
    "source": [
     "ChEMBL DB Link: <https://www.ebi.ac.uk/chembl/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![img](https://www.researchgate.net/profile/Canh-Hao-Nguyen-2/publication/279991871/figure/tbl2/AS:667219172261894@1536088855433/General-chemical-databases.png)"
    ]
   },
   {
@@ -2863,6 +2922,7 @@
    },
    "source": [
     "## Descriptor(Lipinski)\n",
+    "![img](./img/img53.png)\n",
     "\n",
     "1997년 Pfizer의 과학자 인 Christopher A. Lipinski는 구강복용하는 약물이 상대적으로 크기가 작고 지용성이라는 것을 관찰하여 이 규칙을 고안하였습니다.\n",
     "\n",
@@ -3991,13 +4051,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "gwFxFblJGOXa"
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "추가 데이터 베이스들: https://en.wikipedia.org/wiki/List_of_chemical_databases"
+   ]
   },
   {
    "cell_type": "code",
