--- a/11주차_DeepChem사용_3.ipynb
+++ b/11주차_DeepChem사용_3.ipynb
@@ -10,6 +10,17 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![img](./img/img54.png)\n",
+    "Molecular ML :http://moleculenet.ai/\n",
+    "Graph : https://ogb.stanford.edu/\n",
+    "![img](./img/img55.png)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "CuUFZjuaxJ0J"
