--- a/13주차_PytorchQSAR_Classification_2.ipynb
+++ b/13주차_PytorchQSAR_Classification_2.ipynb
@@ -96,11 +96,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget -c https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh\n",
-    "!chmod +x Miniconda3-latest-Linux-x86_64.sh\n",
-    "!time bash ./Miniconda3-latest-Linux-x86_64.sh -b -f -p /usr/local\n",
-    "!time conda install -q -y -c conda-forge python=3.6\n",
-    "!time conda install -q -y -c conda-forge rdkit==2020.09.2"
+    "!pip install tensorflow~=2.4\n",
+    "!pip install deepchem\n",
+    "!pip install rdkit-pypi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!wget -c https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh\n",
+    "#!chmod +x Miniconda3-latest-Linux-x86_64.sh\n",
+    "#!time bash ./Miniconda3-latest-Linux-x86_64.sh -b -f -p /usr/local\n",
+    "#!time conda install -q -y -c conda-forge python=3.6\n",
+    "#!time conda install -q -y -c conda-forge rdkit==2020.09.2"
    ]
   },
   {
@@ -1890,7 +1901,7 @@
    ],
    "source": [
     "#직접 acc를 구해보자\n",
-    "acc = (24+147)/(24+31+2+147)\n",
+    "acc = (32+144)/(24+31+2+147)\n",
     "acc"
    ]
   },
